Parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> cool_prog
Rule 1     cool_prog -> cool_class SEMI cool_prog
Rule 2     cool_prog -> <empty>
Rule 3     cool_class -> CLASS TYPE INHERITS TYPE LBRACE feature_list RBRACE
Rule 4     cool_class -> CLASS TYPE LBRACE feature_list RBRACE
Rule 5     feature_list -> feature SEMI feature_list
Rule 6     feature_list -> <empty>
Rule 7     feature -> IDENTIFIER LPAREN formal_list RPAREN COLON TYPE LBRACE expression RBRACE
Rule 8     feature -> IDENTIFIER COLON TYPE LARROW expression
Rule 9     feature -> IDENTIFIER COLON TYPE
Rule 10    formal_list -> formal formal_tail
Rule 11    formal_list -> <empty>
Rule 12    formal_tail -> COMMA formal formal_tail
Rule 13    formal_tail -> <empty>
Rule 14    formal -> IDENTIFIER COLON TYPE
Rule 15    expression -> IDENTIFIER LARROW expression
Rule 16    expression -> expression AT TYPE DOT IDENTIFIER LPAREN arg_list RPAREN
Rule 17    expression -> expression DOT IDENTIFIER LPAREN arg_list RPAREN
Rule 18    expression -> IDENTIFIER LPAREN arg_list RPAREN
Rule 19    expression -> IF expression THEN expression ELSE expression FI
Rule 20    expression -> WHILE expression LOOP expression POOL
Rule 21    expression -> LBRACE block RBRACE
Rule 22    expression -> LET binding_list IN expression
Rule 23    expression -> CASE expression OF case_list ESAC
Rule 24    expression -> NEW TYPE
Rule 25    expression -> ISVOID expression
Rule 26    expression -> expression PLUS expression
Rule 27    expression -> expression MINUS expression
Rule 28    expression -> expression TIMES expression
Rule 29    expression -> expression DIVIDE expression
Rule 30    expression -> TILDE expression
Rule 31    expression -> expression LT expression
Rule 32    expression -> expression LE expression
Rule 33    expression -> expression EQUALS expression
Rule 34    expression -> NOT expression
Rule 35    expression -> LPAREN expression RPAREN
Rule 36    expression -> IDENTIFIER
Rule 37    expression -> INTEGER
Rule 38    expression -> STRING
Rule 39    expression -> TRUE
Rule 40    expression -> FALSE
Rule 41    arg_list -> expression arg_list_tail
Rule 42    arg_list -> <empty>
Rule 43    arg_list_tail -> COMMA expression arg_list_tail
Rule 44    arg_list_tail -> <empty>
Rule 45    block -> expression SEMI block
Rule 46    block -> <empty>
Rule 47    binding_list -> binding binding_list_tail
Rule 48    binding_list_tail -> COMMA binding binding_list_tail
Rule 49    binding_list_tail -> <empty>
Rule 50    binding -> IDENTIFIER COLON TYPE LARROW expression
Rule 51    binding -> IDENTIFIER COLON TYPE
Rule 52    case_list -> case_element
Rule 53    case_list -> case_element case_list
Rule 54    case_element -> IDENTIFIER COLON TYPE RARROW expression SEMI

Terminals, with rules where they appear

AT                   : 16
CASE                 : 23
CLASS                : 3 4
COLON                : 7 8 9 14 50 51 54
COMMA                : 12 43 48
DIVIDE               : 29
DOT                  : 16 17
ELSE                 : 19
EQUALS               : 33
ESAC                 : 23
FALSE                : 40
FI                   : 19
IDENTIFIER           : 7 8 9 14 15 16 17 18 36 50 51 54
IF                   : 19
IN                   : 22
INHERITS             : 3
INTEGER              : 37
ISVOID               : 25
LARROW               : 8 15 50
LBRACE               : 3 4 7 21
LE                   : 32
LET                  : 22
LOOP                 : 20
LPAREN               : 7 16 17 18 35
LT                   : 31
MINUS                : 27
NEW                  : 24
NOT                  : 34
OF                   : 23
PLUS                 : 26
POOL                 : 20
RARROW               : 54
RBRACE               : 3 4 7 21
RPAREN               : 7 16 17 18 35
SEMI                 : 1 5 45 54
STRING               : 38
THEN                 : 19
TILDE                : 30
TIMES                : 28
TRUE                 : 39
TYPE                 : 3 3 4 7 8 9 14 16 24 50 51 54
WHILE                : 20
error                : 

Nonterminals, with rules where they appear

arg_list             : 16 17 18
arg_list_tail        : 41 43
binding              : 47 48
binding_list         : 22
binding_list_tail    : 47 48
block                : 21 45
case_element         : 52 53
case_list            : 23 53
cool_class           : 1
cool_prog            : 1 0
expression           : 7 8 15 16 17 19 19 19 20 20 22 23 25 26 26 27 27 28 28 29 29 30 31 31 32 32 33 33 34 35 41 43 45 50 54
feature              : 5
feature_list         : 3 4 5
formal               : 10 12
formal_list          : 7
formal_tail          : 10 12

Parsing method: LALR

state 0

    (0) S' -> . cool_prog
    (1) cool_prog -> . cool_class SEMI cool_prog
    (2) cool_prog -> .
    (3) cool_class -> . CLASS TYPE INHERITS TYPE LBRACE feature_list RBRACE
    (4) cool_class -> . CLASS TYPE LBRACE feature_list RBRACE

    $end            reduce using rule 2 (cool_prog -> .)
    CLASS           shift and go to state 3

    cool_prog                      shift and go to state 1
    cool_class                     shift and go to state 2

state 1

    (0) S' -> cool_prog .



state 2

    (1) cool_prog -> cool_class . SEMI cool_prog

    SEMI            shift and go to state 4


state 3

    (3) cool_class -> CLASS . TYPE INHERITS TYPE LBRACE feature_list RBRACE
    (4) cool_class -> CLASS . TYPE LBRACE feature_list RBRACE

    TYPE            shift and go to state 5


state 4

    (1) cool_prog -> cool_class SEMI . cool_prog
    (1) cool_prog -> . cool_class SEMI cool_prog
    (2) cool_prog -> .
    (3) cool_class -> . CLASS TYPE INHERITS TYPE LBRACE feature_list RBRACE
    (4) cool_class -> . CLASS TYPE LBRACE feature_list RBRACE

    $end            reduce using rule 2 (cool_prog -> .)
    CLASS           shift and go to state 3

    cool_class                     shift and go to state 2
    cool_prog                      shift and go to state 6

state 5

    (3) cool_class -> CLASS TYPE . INHERITS TYPE LBRACE feature_list RBRACE
    (4) cool_class -> CLASS TYPE . LBRACE feature_list RBRACE

    INHERITS        shift and go to state 7
    LBRACE          shift and go to state 8


state 6

    (1) cool_prog -> cool_class SEMI cool_prog .

    $end            reduce using rule 1 (cool_prog -> cool_class SEMI cool_prog .)


state 7

    (3) cool_class -> CLASS TYPE INHERITS . TYPE LBRACE feature_list RBRACE

    TYPE            shift and go to state 9


state 8

    (4) cool_class -> CLASS TYPE LBRACE . feature_list RBRACE
    (5) feature_list -> . feature SEMI feature_list
    (6) feature_list -> .
    (7) feature -> . IDENTIFIER LPAREN formal_list RPAREN COLON TYPE LBRACE expression RBRACE
    (8) feature -> . IDENTIFIER COLON TYPE LARROW expression
    (9) feature -> . IDENTIFIER COLON TYPE

    RBRACE          reduce using rule 6 (feature_list -> .)
    IDENTIFIER      shift and go to state 12

    feature_list                   shift and go to state 10
    feature                        shift and go to state 11

state 9

    (3) cool_class -> CLASS TYPE INHERITS TYPE . LBRACE feature_list RBRACE

    LBRACE          shift and go to state 13


state 10

    (4) cool_class -> CLASS TYPE LBRACE feature_list . RBRACE

    RBRACE          shift and go to state 14


state 11

    (5) feature_list -> feature . SEMI feature_list

    SEMI            shift and go to state 15


state 12

    (7) feature -> IDENTIFIER . LPAREN formal_list RPAREN COLON TYPE LBRACE expression RBRACE
    (8) feature -> IDENTIFIER . COLON TYPE LARROW expression
    (9) feature -> IDENTIFIER . COLON TYPE

    LPAREN          shift and go to state 16
    COLON           shift and go to state 17


state 13

    (3) cool_class -> CLASS TYPE INHERITS TYPE LBRACE . feature_list RBRACE
    (5) feature_list -> . feature SEMI feature_list
    (6) feature_list -> .
    (7) feature -> . IDENTIFIER LPAREN formal_list RPAREN COLON TYPE LBRACE expression RBRACE
    (8) feature -> . IDENTIFIER COLON TYPE LARROW expression
    (9) feature -> . IDENTIFIER COLON TYPE

    RBRACE          reduce using rule 6 (feature_list -> .)
    IDENTIFIER      shift and go to state 12

    feature_list                   shift and go to state 18
    feature                        shift and go to state 11

state 14

    (4) cool_class -> CLASS TYPE LBRACE feature_list RBRACE .

    SEMI            reduce using rule 4 (cool_class -> CLASS TYPE LBRACE feature_list RBRACE .)


state 15

    (5) feature_list -> feature SEMI . feature_list
    (5) feature_list -> . feature SEMI feature_list
    (6) feature_list -> .
    (7) feature -> . IDENTIFIER LPAREN formal_list RPAREN COLON TYPE LBRACE expression RBRACE
    (8) feature -> . IDENTIFIER COLON TYPE LARROW expression
    (9) feature -> . IDENTIFIER COLON TYPE

    RBRACE          reduce using rule 6 (feature_list -> .)
    IDENTIFIER      shift and go to state 12

    feature                        shift and go to state 11
    feature_list                   shift and go to state 19

state 16

    (7) feature -> IDENTIFIER LPAREN . formal_list RPAREN COLON TYPE LBRACE expression RBRACE
    (10) formal_list -> . formal formal_tail
    (11) formal_list -> .
    (14) formal -> . IDENTIFIER COLON TYPE

    RPAREN          reduce using rule 11 (formal_list -> .)
    IDENTIFIER      shift and go to state 20

    formal_list                    shift and go to state 21
    formal                         shift and go to state 22

state 17

    (8) feature -> IDENTIFIER COLON . TYPE LARROW expression
    (9) feature -> IDENTIFIER COLON . TYPE

    TYPE            shift and go to state 23


state 18

    (3) cool_class -> CLASS TYPE INHERITS TYPE LBRACE feature_list . RBRACE

    RBRACE          shift and go to state 24


state 19

    (5) feature_list -> feature SEMI feature_list .

    RBRACE          reduce using rule 5 (feature_list -> feature SEMI feature_list .)


state 20

    (14) formal -> IDENTIFIER . COLON TYPE

    COLON           shift and go to state 25


state 21

    (7) feature -> IDENTIFIER LPAREN formal_list . RPAREN COLON TYPE LBRACE expression RBRACE

    RPAREN          shift and go to state 26


state 22

    (10) formal_list -> formal . formal_tail
    (12) formal_tail -> . COMMA formal formal_tail
    (13) formal_tail -> .

    COMMA           shift and go to state 28
    RPAREN          reduce using rule 13 (formal_tail -> .)

    formal_tail                    shift and go to state 27

state 23

    (8) feature -> IDENTIFIER COLON TYPE . LARROW expression
    (9) feature -> IDENTIFIER COLON TYPE .

    LARROW          shift and go to state 29
    SEMI            reduce using rule 9 (feature -> IDENTIFIER COLON TYPE .)


state 24

    (3) cool_class -> CLASS TYPE INHERITS TYPE LBRACE feature_list RBRACE .

    SEMI            reduce using rule 3 (cool_class -> CLASS TYPE INHERITS TYPE LBRACE feature_list RBRACE .)


state 25

    (14) formal -> IDENTIFIER COLON . TYPE

    TYPE            shift and go to state 30


state 26

    (7) feature -> IDENTIFIER LPAREN formal_list RPAREN . COLON TYPE LBRACE expression RBRACE

    COLON           shift and go to state 31


state 27

    (10) formal_list -> formal formal_tail .

    RPAREN          reduce using rule 10 (formal_list -> formal formal_tail .)


state 28

    (12) formal_tail -> COMMA . formal formal_tail
    (14) formal -> . IDENTIFIER COLON TYPE

    IDENTIFIER      shift and go to state 20

    formal                         shift and go to state 32

state 29

    (8) feature -> IDENTIFIER COLON TYPE LARROW . expression
    (15) expression -> . IDENTIFIER LARROW expression
    (16) expression -> . expression AT TYPE DOT IDENTIFIER LPAREN arg_list RPAREN
    (17) expression -> . expression DOT IDENTIFIER LPAREN arg_list RPAREN
    (18) expression -> . IDENTIFIER LPAREN arg_list RPAREN
    (19) expression -> . IF expression THEN expression ELSE expression FI
    (20) expression -> . WHILE expression LOOP expression POOL
    (21) expression -> . LBRACE block RBRACE
    (22) expression -> . LET binding_list IN expression
    (23) expression -> . CASE expression OF case_list ESAC
    (24) expression -> . NEW TYPE
    (25) expression -> . ISVOID expression
    (26) expression -> . expression PLUS expression
    (27) expression -> . expression MINUS expression
    (28) expression -> . expression TIMES expression
    (29) expression -> . expression DIVIDE expression
    (30) expression -> . TILDE expression
    (31) expression -> . expression LT expression
    (32) expression -> . expression LE expression
    (33) expression -> . expression EQUALS expression
    (34) expression -> . NOT expression
    (35) expression -> . LPAREN expression RPAREN
    (36) expression -> . IDENTIFIER
    (37) expression -> . INTEGER
    (38) expression -> . STRING
    (39) expression -> . TRUE
    (40) expression -> . FALSE

    IDENTIFIER      shift and go to state 33
    IF              shift and go to state 36
    WHILE           shift and go to state 37
    LBRACE          shift and go to state 38
    LET             shift and go to state 39
    CASE            shift and go to state 40
    NEW             shift and go to state 41
    ISVOID          shift and go to state 42
    TILDE           shift and go to state 43
    NOT             shift and go to state 44
    LPAREN          shift and go to state 35
    INTEGER         shift and go to state 45
    STRING          shift and go to state 46
    TRUE            shift and go to state 47
    FALSE           shift and go to state 48

    expression                     shift and go to state 34

state 30

    (14) formal -> IDENTIFIER COLON TYPE .

    COMMA           reduce using rule 14 (formal -> IDENTIFIER COLON TYPE .)
    RPAREN          reduce using rule 14 (formal -> IDENTIFIER COLON TYPE .)


state 31

    (7) feature -> IDENTIFIER LPAREN formal_list RPAREN COLON . TYPE LBRACE expression RBRACE

    TYPE            shift and go to state 49


state 32

    (12) formal_tail -> COMMA formal . formal_tail
    (12) formal_tail -> . COMMA formal formal_tail
    (13) formal_tail -> .

    COMMA           shift and go to state 28
    RPAREN          reduce using rule 13 (formal_tail -> .)

    formal_tail                    shift and go to state 50

state 33

    (15) expression -> IDENTIFIER . LARROW expression
    (18) expression -> IDENTIFIER . LPAREN arg_list RPAREN
    (36) expression -> IDENTIFIER .

    LARROW          shift and go to state 51
    LPAREN          shift and go to state 52
    AT              reduce using rule 36 (expression -> IDENTIFIER .)
    DOT             reduce using rule 36 (expression -> IDENTIFIER .)
    PLUS            reduce using rule 36 (expression -> IDENTIFIER .)
    MINUS           reduce using rule 36 (expression -> IDENTIFIER .)
    TIMES           reduce using rule 36 (expression -> IDENTIFIER .)
    DIVIDE          reduce using rule 36 (expression -> IDENTIFIER .)
    LT              reduce using rule 36 (expression -> IDENTIFIER .)
    LE              reduce using rule 36 (expression -> IDENTIFIER .)
    EQUALS          reduce using rule 36 (expression -> IDENTIFIER .)
    SEMI            reduce using rule 36 (expression -> IDENTIFIER .)
    RPAREN          reduce using rule 36 (expression -> IDENTIFIER .)
    THEN            reduce using rule 36 (expression -> IDENTIFIER .)
    LOOP            reduce using rule 36 (expression -> IDENTIFIER .)
    OF              reduce using rule 36 (expression -> IDENTIFIER .)
    COMMA           reduce using rule 36 (expression -> IDENTIFIER .)
    RBRACE          reduce using rule 36 (expression -> IDENTIFIER .)
    ELSE            reduce using rule 36 (expression -> IDENTIFIER .)
    POOL            reduce using rule 36 (expression -> IDENTIFIER .)
    FI              reduce using rule 36 (expression -> IDENTIFIER .)
    IN              reduce using rule 36 (expression -> IDENTIFIER .)


state 34

    (8) feature -> IDENTIFIER COLON TYPE LARROW expression .
    (16) expression -> expression . AT TYPE DOT IDENTIFIER LPAREN arg_list RPAREN
    (17) expression -> expression . DOT IDENTIFIER LPAREN arg_list RPAREN
    (26) expression -> expression . PLUS expression
    (27) expression -> expression . MINUS expression
    (28) expression -> expression . TIMES expression
    (29) expression -> expression . DIVIDE expression
    (31) expression -> expression . LT expression
    (32) expression -> expression . LE expression
    (33) expression -> expression . EQUALS expression

    SEMI            reduce using rule 8 (feature -> IDENTIFIER COLON TYPE LARROW expression .)
    AT              shift and go to state 53
    DOT             shift and go to state 54
    PLUS            shift and go to state 55
    MINUS           shift and go to state 56
    TIMES           shift and go to state 57
    DIVIDE          shift and go to state 58
    LT              shift and go to state 59
    LE              shift and go to state 60
    EQUALS          shift and go to state 61


state 35

    (35) expression -> LPAREN . expression RPAREN
    (15) expression -> . IDENTIFIER LARROW expression
    (16) expression -> . expression AT TYPE DOT IDENTIFIER LPAREN arg_list RPAREN
    (17) expression -> . expression DOT IDENTIFIER LPAREN arg_list RPAREN
    (18) expression -> . IDENTIFIER LPAREN arg_list RPAREN
    (19) expression -> . IF expression THEN expression ELSE expression FI
    (20) expression -> . WHILE expression LOOP expression POOL
    (21) expression -> . LBRACE block RBRACE
    (22) expression -> . LET binding_list IN expression
    (23) expression -> . CASE expression OF case_list ESAC
    (24) expression -> . NEW TYPE
    (25) expression -> . ISVOID expression
    (26) expression -> . expression PLUS expression
    (27) expression -> . expression MINUS expression
    (28) expression -> . expression TIMES expression
    (29) expression -> . expression DIVIDE expression
    (30) expression -> . TILDE expression
    (31) expression -> . expression LT expression
    (32) expression -> . expression LE expression
    (33) expression -> . expression EQUALS expression
    (34) expression -> . NOT expression
    (35) expression -> . LPAREN expression RPAREN
    (36) expression -> . IDENTIFIER
    (37) expression -> . INTEGER
    (38) expression -> . STRING
    (39) expression -> . TRUE
    (40) expression -> . FALSE

    IDENTIFIER      shift and go to state 33
    IF              shift and go to state 36
    WHILE           shift and go to state 37
    LBRACE          shift and go to state 38
    LET             shift and go to state 39
    CASE            shift and go to state 40
    NEW             shift and go to state 41
    ISVOID          shift and go to state 42
    TILDE           shift and go to state 43
    NOT             shift and go to state 44
    LPAREN          shift and go to state 35
    INTEGER         shift and go to state 45
    STRING          shift and go to state 46
    TRUE            shift and go to state 47
    FALSE           shift and go to state 48

    expression                     shift and go to state 62

state 36

    (19) expression -> IF . expression THEN expression ELSE expression FI
    (15) expression -> . IDENTIFIER LARROW expression
    (16) expression -> . expression AT TYPE DOT IDENTIFIER LPAREN arg_list RPAREN
    (17) expression -> . expression DOT IDENTIFIER LPAREN arg_list RPAREN
    (18) expression -> . IDENTIFIER LPAREN arg_list RPAREN
    (19) expression -> . IF expression THEN expression ELSE expression FI
    (20) expression -> . WHILE expression LOOP expression POOL
    (21) expression -> . LBRACE block RBRACE
    (22) expression -> . LET binding_list IN expression
    (23) expression -> . CASE expression OF case_list ESAC
    (24) expression -> . NEW TYPE
    (25) expression -> . ISVOID expression
    (26) expression -> . expression PLUS expression
    (27) expression -> . expression MINUS expression
    (28) expression -> . expression TIMES expression
    (29) expression -> . expression DIVIDE expression
    (30) expression -> . TILDE expression
    (31) expression -> . expression LT expression
    (32) expression -> . expression LE expression
    (33) expression -> . expression EQUALS expression
    (34) expression -> . NOT expression
    (35) expression -> . LPAREN expression RPAREN
    (36) expression -> . IDENTIFIER
    (37) expression -> . INTEGER
    (38) expression -> . STRING
    (39) expression -> . TRUE
    (40) expression -> . FALSE

    IDENTIFIER      shift and go to state 33
    IF              shift and go to state 36
    WHILE           shift and go to state 37
    LBRACE          shift and go to state 38
    LET             shift and go to state 39
    CASE            shift and go to state 40
    NEW             shift and go to state 41
    ISVOID          shift and go to state 42
    TILDE           shift and go to state 43
    NOT             shift and go to state 44
    LPAREN          shift and go to state 35
    INTEGER         shift and go to state 45
    STRING          shift and go to state 46
    TRUE            shift and go to state 47
    FALSE           shift and go to state 48

    expression                     shift and go to state 63

state 37

    (20) expression -> WHILE . expression LOOP expression POOL
    (15) expression -> . IDENTIFIER LARROW expression
    (16) expression -> . expression AT TYPE DOT IDENTIFIER LPAREN arg_list RPAREN
    (17) expression -> . expression DOT IDENTIFIER LPAREN arg_list RPAREN
    (18) expression -> . IDENTIFIER LPAREN arg_list RPAREN
    (19) expression -> . IF expression THEN expression ELSE expression FI
    (20) expression -> . WHILE expression LOOP expression POOL
    (21) expression -> . LBRACE block RBRACE
    (22) expression -> . LET binding_list IN expression
    (23) expression -> . CASE expression OF case_list ESAC
    (24) expression -> . NEW TYPE
    (25) expression -> . ISVOID expression
    (26) expression -> . expression PLUS expression
    (27) expression -> . expression MINUS expression
    (28) expression -> . expression TIMES expression
    (29) expression -> . expression DIVIDE expression
    (30) expression -> . TILDE expression
    (31) expression -> . expression LT expression
    (32) expression -> . expression LE expression
    (33) expression -> . expression EQUALS expression
    (34) expression -> . NOT expression
    (35) expression -> . LPAREN expression RPAREN
    (36) expression -> . IDENTIFIER
    (37) expression -> . INTEGER
    (38) expression -> . STRING
    (39) expression -> . TRUE
    (40) expression -> . FALSE
